build_types_move.log

> sysm_native@1.0.0 build /workspaces/codespaces-blank/sysm
> expo export --platform web

React Compiler enabled
Starting Metro Bundler
Static rendering is enabled. Learn more: https://docs.expo.dev/router/reference/static-rendering/
Web node_modules/expo-router/entry.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
λ node_modules/expo-router/node/render.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web node_modules/expo-router/entry.js ▓▓░░░░░░░░░░░░░░ 16.0% (4/8)
λ node_modules/expo-router/node/render.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web node_modules/expo-router/entry.js ▓▓░░░░░░░░░░░░░░ 16.0% (112/284)
λ node_modules/expo-router/node/render.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░ 94.9% (2651/2722)
λ node_modules/expo-router/node/render.js ▓▓░░░░░░░░░░░░░░ 16.1% (138/344)
Web Bundling failed 21489ms node_modules/expo-router/entry.js (2722 modules)
SyntaxError: Error: /workspaces/codespaces-blank/sysm/components/MediaGallery.tsx: Unexpected token, expected ";" (14:9)

  12 | interface MediaGalleryProps {
  13 |
> 14 | function MediaSkeleton({ style }: { style?: any }) {
     |          ^
  15 |   return (
  16 |     <Skeleton
  17 |       variant="rounded"
 ELIFECYCLE  Command failed with exit code 1.
